# table-manager

./: .env  .gitignore  Cargo.toml  diesel.toml
.cargo/: config.toml
migrations/2024-08-27-194015_create_posts/: down.sql  up.sql
src/: main.rs  schema.rs  table_store.rs  tables.rs
src/models/: bridge_table.rs  mod.rs  table.rs
src/table_store/: db_table_store.rs  in_memory_table_store.rs  mod.rs
