[package]
name = "table-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
utoipa = { version = "4.2.3", features = ["actix_extras"] }
utoipa-redoc = { version = "4.0.0", features = ["actix-web"] }
utoipa-scalar = { version = "0.1.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
