[package]
name = "table-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
utoipa = { version = "4.2.3", features = ["actix_extras", "chrono"] }
utoipa-redoc = { version = "4.0.0", features = ["actix-web"] }
utoipa-scalar = { version = "0.1.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
env_logger = "0.11.5"
log = "0.4.22"
diesel = { version = "2.2.3", default-features = false }
rand = "0.8.5"
dotenvy = "0.15.7"
diesel-async = { version = "0.5.0", features = ["deadpool", "mysql"] }
async-trait = "0.1.81"
